...
        android:layout_marginBottom="64dp"
        android:fontFamily="@font/lato"
        android:text="@string/login_greeting"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/emailInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="wrap_content"
...
        android:fontFamily="@font/lato"
        android:foregroundTint="@color/Lighter_Gray_Text"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="10dp"
        android:textColor="@color/Lighter_Gray_Text"
        app:layout_constraintBottom_toTopOf="@+id/passwordInput"
        app:layout_constraintStart_toStartOf="@+id/passwordInput" />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.56" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corners_button_not_clicked"
        android:fontFamily="@font/lato_bold"
        android:text="Login"
        app:layout_constraintEnd_toEndOf="@+id/passwordInput"
        app:layout_constraintTop_toTopOf="@+id/signup_button" />

    <Button
        android:id="@+id/signup_button"
        android:layout_width="100dp"
...
