...
        android:layout_height="match_parent"
        android:layout_marginVertical="7dp"
        android:layout_marginHorizontal="10dp"
        android:background="@drawable/habit_status_bar" />

    <TextView
        android:id="@+id/habit_name_text"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dp"
        android:layout_toLeftOf="@id/habit_progress_bar"
        android:layout_toRightOf="@id/habit_status_bar"
...
