<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="30dp"
    android:background="@drawable/rounded_box"
    android:backgroundTint="@color/Medium_Gray_Background"
    tools:context=".fragments.ViewEditHabitEventFragment">

    <EditText
        android:id="@+id/location_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:fontFamily="@font/lato"
        android:gravity="center"
        android:hint="Tap Globe to Set Location"
        android:inputType="textMultiLine"
        android:maxLines="3"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/comments_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/comments_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_box"
        android:ems="10"
        android:fontFamily="@font/lato"
        android:gravity="center|center_horizontal"
        android:hint="Comment"
        android:inputType="textPersonName"
        android:maxLength="20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/habit_event_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/lato_bold"
        android:text="TextView"
        android:textColor="@color/Lighter_Gray_Text"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/noPhotoFrame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/addHabitEventButton"
        android:layout_width="49dp"
        android:layout_height="43dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@color/Medium_Gray_Background"
        android:src="@drawable/ic_done"
        app:layout_constraintBottom_toTopOf="@+id/habit_event_title"
        app:layout_constraintStart_toEndOf="@+id/habit_event_title"
        app:tint="@color/Lighter_Gray_Text" />

    <ImageButton
        android:id="@+id/backHabitEventButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@color/Medium_Gray_Background"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintBottom_toTopOf="@+id/habit_event_title"
        app:layout_constraintEnd_toStartOf="@+id/habit_event_title"
        app:tint="@color/Lighter_Gray_Text" />

    <ImageButton
        android:id="@+id/locationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@color/Medium_Gray_Background"
        android:src="@drawable/ic_baseline_travel_explore_24"
        app:layout_constraintBottom_toTopOf="@+id/location_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/noPhotoFrame"
        android:layout_width="75dp"
        android:layout_height="75dp"
        app:layout_constraintBottom_toBottomOf="@+id/photoFrame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/habitEventPhotoCircle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/Medium_Gray_Background"
            android:src="@drawable/circle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:tint="@color/Lighter_Gray_Text" />

        <ImageButton
            android:id="@+id/habitEventPhotoButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@android:color/transparent"
            android:src="@drawable/ic_baseline_image_24" />

        <ImageView
            android:id="@+id/habitEventPhotoPlusBubble"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="14dp"
            android:layout_marginRight="14dp"
            android:src="@drawable/circle"
            app:layout_constraintEnd_toEndOf="@+id/habitEventPhotoCircle"
            app:layout_constraintTop_toTopOf="@+id/habitEventPhotoCircle"
            app:tint="@color/Dark_Gray_Background" />

        <ImageView
            android:id="@+id/habitEventPhotoPlusIcon"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/ic_baseline_add_24"
            app:layout_constraintBottom_toBottomOf="@+id/habitEventPhotoPlusBubble"
            app:layout_constraintEnd_toEndOf="@+id/habitEventPhotoPlusBubble"
            app:layout_constraintStart_toStartOf="@+id/habitEventPhotoPlusBubble"
            app:layout_constraintTop_toTopOf="@+id/habitEventPhotoPlusBubble"
            app:tint="@color/Lighter_Gray_Text" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/photoFrame"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/locationButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/habitEventPhotoFrame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp"
            tools:src="@tools:sample/avatars" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>